<resources>
    <string name="app_name">Bozorbek_vol2</string>

    <string name="title_home">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_search">Поиск</string>
    <string name="title_basket">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="search_history">История поиска</string>
    <string name="title_notification">Уведомление</string>
    <string name="title_search_order">История заказа</string>
    <string name="title_company_info">Информация о компании</string>
    <string name="title_settings">Настройки безопасности</string>
    <string name="title_call">Служба поддержки</string>
    <string name="example_order_title">Покупатель № 15</string>
    <string name="example_name">Нина Азаматова</string>
    <string name="example_overview" formatted="true">Авока́до, или Персе́я америка́нская (лат. Persēa americāna), — вечнозелёное плодовое растение; вид рода Персея (Persea) семейства Лавровые (Lauraceae), типовой вид рода. Важная плодовая культура. Плоды растения также называются авокадо: их мякоть богата витаминами и важными минеральными веществами.\n\nОписание\n\nОбъем продукта: 13\n\nАртикул : FR-1\n\nОрганик : Да\n\nПроизводитель : Садоводство</string>
    <string name="login_registration_text">У вас нет аккаунта?  <b>Зарегистрироваться.</b></string>
    <string name="register_text">У меня есть аккаунт. <b>Войти.</b></string>
    <string name="mainfloatingactionbutton">MainFloatingActionButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_1">   Сегодня информационно-коммуникационные технологии занимают важное место в развитии республики.\n\n    Проводимая за предыдущие годы руководством Узбекистана работа по широкому внедрению и развитию информационно-коммуникационных технологий уже сегодня даёт свои плоды\n\n    <b>ООО «RAQAMLI DUNYO»</b> занимается разработкой и активно внедрением программного обеспечения, приложений для ПК и мобильных устройств.\n\n    <b>ООО «RAQAMLI DUNYO»</b> создано в 2020 году. Компания <b>ООО «RAQAMLI DUNYO»</b> осуществляет свою деятельность в соответствии с Уставом и законодательством <b>Республики Узбекистан</b>, форма организации, которого определена как Общество с ограниченной ответственностью.\nОсновными видами деятельности Предприятия по уставу являются:\n⦁ <b>Разработка компьютерного программного обеспечения и приложений для общего и специального назначения;</b>\n⦁ <b>Другие виды деятельности, не запрещенные законодательством.</b>\n\n    Предприятие было создано с целью получения прибыли путем осуществления предпринимательской деятельности.\n\n    В связи что 2020 год был назван «Год развития науки, просвещения и цифровой экономики», а также для внесения своего вклада развития экономики государства Компания <b>ООО «RAQAMLI DUNYO»</b> реализует программы и информационные системы для специалистов экономики и бухгалтерии. Кроме этого специалистами <b>ООО «RAQAMLI DUNYO»</b> разрабатывается настольные приложения, веб-приложения, приложения для мобильных устройств разных сложностей для государственных и также частных организаций в различных сферах деятельности\n\n    При создании программ и приложений компания<b>ООО «RAQAMLI DUNYO»</b> опирается на профессионализм своей команды. Основными Заказчиками Предприятия являются экономисты и бухгалтеры. Правообладателем конечного продукта является компания <b>ООО «RAQAMLI DUNYO»</b>, и вся информация и данные хранятся на серверах компания <b>ООО «RAQAMLI DUNYO»</b>.\n\n    Предприятие <b>ООО «RAQAMLI DUNYO»</b> выполняет полный цикл работ по разработке и внедрению программного обеспечения в области разработки программных продуктов, информационных систем, веб - приложений, приложения для мобильных устройств.</string>
    <string name="log_in_to_account">Войдите в аккаунт</string>
    <string name="tel_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="username">Имя Фамилия</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="enter_code">Введите код</string>
    <string name="get_code">Получить код</string>
    <string name="write_code_verify">Введите код \nподтверждения</string>
    <string name="write_verify_code">Введите код</string>
    <string name="verify_code">Подтвердить код</string>
    <string name="create_password">Создайте пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="political_conf">Я Соглашаюсь с политикой конфидециальности.</string>
    <string name="creating_password">Создать пароль</string>
    <string name="success">Успешно</string>
    <string name="success_registration">Вы успешно зарегистрировались на нашем мобильном приложение. Спасибо.</string>
    <string name="excelent">Отлично</string>
    <string name="not_registrated">Ой вы походу ещё не зарегистрированы :(</string>
    <string name="go_registration">Перейти к регистрации</string>
    <string name="sum_of_deliviring">Сумма доставки:</string>
    <string name="entire_sum">Общая сумма</string>
    <string name="name">Имя:</string>
    <string name="number">Номер:</string>
    <string name="adress">Адрес:</string>
    <string name="adress_of_user">Адрес</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="comment_to_order">Комментарий к заказу</string>
    <string name="add_comment">Добавить комментарии</string>
    <string name="send">Отправить</string>
    <string name="check_out">Оформить заказ</string>
    <string name="save_order">Сохранить заказ</string>
    <string name="create_title_of_basket">Придумайте названия корзины</string>
    <string name="create">Создать</string>
    <string name="cancel">Отменить</string>
    <string name="successfully_saved_basket">Вы успешно сохранили готовую корзину. Спасибо.</string>
    <string name="sort">Сорт</string>
    <string name="product_owner">Производитель</string>
    <string name="package_product">Упаковка</string>
    <string name="weight">Килограм</string>
    <string name="size">Размер</string>
    <string name="to_basket">В корзину</string>
    <string name="search_product">Поиск продуктов.</string>
    <string name="welcome">Добро пожаловать в Бозорбек. Найдите продукты которые вам нужны.</string>
    <string name="save_profile_data">Сохранить</string>
    <string name="complaints">Жалобы</string>
    <string name="ready_package">Готовые корзины</string>
    <string name="auto_order">Авто заказ</string>
    <string name="exit_profile">Выйти из профиля</string>
    <string name="password_security">Пароли безопасности</string>
    <string name="description_of_password_security">Пароль должен содержать включая цифры, буквы и специальные символы (!?@%%).</string>
    <string name="write_old_password">Ввелите старый пароль</string>
    <string name="write_new_password">Ввелите новый пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="complaint_reason">Причина жалобы?</string>
    <string name="complaint_stage">Стадия жалобы</string>
    <string name="rodu_curier">Грубый курьер</string>
    <string name="bad_quality">Приехало в плохом качестве</string>
    <string name="products_spilled">Продукты разлились</string>
    <string name="too_long_collecting">Заказ слишком долго собирался</string>
    <string name="bad_deliviring">Плохая доставка</string>
    <string name="other">Другое</string>
    <string name="all">Все</string>
    <string name="mine">Мои</string>
    <string name="recomended">Рекомендаци</string>
    <string name="active_order">Активные заказы</string>
    <string name="history_order">История заказов</string>
    <string name="order_number">Заказ номер: 252525</string>
    <string name="order_send_to_collector">Заказ отправлен сборщику.</string>
    <string name="clloector_is_collecting">Сборщик собирает.</string>
    <string name="currier_on_way">Курьер выехал в путь.</string>
    <string name="order_info">Информация о заказе</string>
    <string name="cancel_order">Отменить заказ</string>
</resources>