<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".ui.auth.fragments.SuccessfullyRegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_300sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="#0ACFA1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/check_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/check"
                android:layout_marginTop="@dimen/_55sdp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/check_success"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/success"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                android:id="@+id/text_success"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_success"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/success_registration"
                android:textAlignment="center"
                android:paddingHorizontal="@dimen/_20sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/excelent"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                android:backgroundTint="#000000"
                android:alpha="0.25"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:cornerRadius="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>