<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.fragments.CreatePasswordFragment">

    <!-- TODO: Update blank fragment layout -->


    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_background"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/password_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="30dp"
                    android:elevation="12dp"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/fruit_light_green"
                    app:civ_border_width="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/create_password"
                    android:textColor="@color/fruit_light_green"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_img" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mtv_password">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/fruit_light_blue"
                        app:boxStrokeColor="@color/fruit_light_blue"
                        app:boxStrokeWidth="0dp"
                        app:hintTextColor="@color/fruit_light_dark_blue"
                        android:textColorHint="@color/fruit_grey"
                        app:endIconTint="@color/fruit_grey"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edT_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.5"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="10dp"
                            android:hint="@string/password"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="text"
                            android:padding="12dp"
                            android:textColor="@color/fruit_grey"
                            android:textColorHint="@color/fruit_grey"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mcv_new_password">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/fruit_light_blue"
                        app:boxStrokeColor="@color/fruit_light_blue"
                        app:boxStrokeWidth="0dp"
                        app:hintTextColor="@color/fruit_light_dark_blue"
                        android:textColorHint="@color/fruit_grey"
                        app:endIconTint="@color/fruit_grey"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edT_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.5"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawablePadding="10dp"
                            android:hint="@string/confirm_password"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="text"
                            android:padding="12dp"
                            android:textColor="@color/fruit_grey"
                            android:textColorHint="@color/fruit_grey"
                            android:textSize="15dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox_political_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mcv_confirm_password" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/political_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/fruit_grey"
                    android:text="@string/political_conf"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkbox_political_agreement"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/checkbox_political_agreement"
                    app:layout_constraintTop_toTopOf="@+id/checkbox_political_agreement" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registration_create_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:backgroundTint="@color/fruit_light_green"
                    android:elevation="30dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/creating_password"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="25dp"
                    android:textSize="15sp"
                    android:textColor="@color/button_text_color"
                    app:cornerRadius="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/political_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>